reformat the codebase with ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,8 @@ packages = ["comp2048"]
 [tool.setuptools.package-data]
 "comp2048.alphazero.temp_cpu" = ["*.pth.tar", "*.json"]
 "comp2048.alphazero.temp_gpu" = ["*.pth.tar"]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.12.8",
+]
